[package]
name = "negacyclic-lut-concrete-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-core = { package = "concrete-core-experimental", version = "1.0.0-alpha", features = ["multithread", "serde_serialize"]}
