[package]
name = "negacyclic-lut-concrete-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-core = { package = "concrete-core-experimental", version = "^1.0.0-alpha", features = ["multithread", "serde_serialize"]}
concrete-shortint = { version = "^0.1.0-beta" }
bincode = "^1.3.3"
rayon = "^1.5.1"
crossbeam-utils = "^0.8.0"
